objects/delphiDemo__Confidence_level_and_month__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Use to store the confidence level of the user and the selected month.</description>
    <fields>
        <fullName>delphiDemo__Confidence_Level_Five__c</fullName>
        <label>Confidence Level Five</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Confidence_Level_Four__c</fullName>
        <label>Confidence Level Four</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Confidence_Level_Three__c</fullName>
        <label>Confidence Level Three</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Confidence_Level_Two__c</fullName>
        <label>Confidence Level Two</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Confidence_Level__c</fullName>
        <description>Use to store the selected confidence level</description>
        <label>Confidence Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Selected_Month__c</fullName>
        <description>Use to store the selected month</description>
        <label>Selected Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Confidence level and month</label>
</CustomObject>